folder icon small fix

--- a/squareBasicBg.theme.css
+++ b/squareBasicBg.theme.css
@@ -578,7 +578,7 @@ otherwise discord will overwrite it */
 }
 
 .folderIcon__48112 {
-    margin-left: 2px !important;
+    margin-left: 4px !important;
     margin-bottom: -12px !important;
     margin-top: -4px !important;
 }
